--- a/AndroidChatClient/app/src/main/res/layout/activity_main.xml
+++ b/AndroidChatClient/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world"
-        android:id="@+id/chat_text"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/chat_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:background="@drawable/talk_right"/>
+        android:divider="@null"
+        android:layout_weight="1">
 
-    <TextView android:text="@string/dummy_str"
-        android:id="@+id/chat_text_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/talk_left"/>
+    </ListView>
+
+    <Button
+        android:id="@+id/fetch_button"
+        android:text="@string/fetch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 
 </LinearLayout>
