--- a/AndroidChatClient/app/src/main/res/layout/layout_chat.xml
+++ b/AndroidChatClient/app/src/main/res/layout/layout_chat.xml
@@ -3,12 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView android:text="@string/hello_world"
-        android:id="@+id/chat_text"
+    <TextView
+        android:id="@+id/chat_text_right"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:textColor="@color/primary_dark_material_dark"
         android:background="@drawable/talk_right"/>
+
+    <TextView
+        android:id="@+id/chat_text_left"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/primary_dark_material_dark"
+        android:background="@drawable/talk_left"/>
 
 </LinearLayout>
